ci: Remove unused biblatex and biber packages
Removes the biblatex and biber packages from the TeX Live
installation as they are not required for the current
documents. This simplifies dependencies and removes a now-irrelevant
note from the README.

--- a/.github/workflows/org-to-pdf.yml
+++ b/.github/workflows/org-to-pdf.yml
@@ -24,7 +24,7 @@ jobs:
           texlive-version: '2024'
           scheme: 'small'
           extra-packages: >-
-            latexmk biblatex biber pgf amsmath collection-latexrecommended collection-fontsrecommended
+            latexmk pgf amsmath collection-latexrecommended collection-fontsrecommended
           cache: true
 
       - name: Convert .org files to PDF
